--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ leetcode/x64/Debug/leetcode.tlog/link.command.1.tlog
 leetcode/x64/Debug/leetcode.tlog/link.read.1.tlog
 leetcode/x64/Debug/leetcode.tlog/link.write.1.tlog
 leetcode/x64/Debug/vc140.idb
+leetcode/leetcode.vcxproj
+leetcode/leetcode.vcxproj.filters
